--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,6 @@
   color: #710b7e !important;
 }
 
-.MuiAppBar-colorPrimary {
-  background-color: #710b7e !important;
+.bottom-buttons{
+  margin-top: 2%;
 }
